--- a/jquery/3.effect/sample.html
+++ b/jquery/3.effect/sample.html
@@ -9,7 +9,7 @@
     <script>
         $(function() {
             $("#box").slideUp(2000, "linear", function() {
-                alert("hello");
+                alert("hello!!");
             })
         })
     </script>
